--- a/style.css
+++ b/style.css
@@ -24,8 +24,10 @@
 }
 
 body {
-  height: 300vh;
+  height: fit-content;
   color: var(--clr-font-main-dark);
+  background-color: var(--clr-fill-medium-dark);
+  overflow-x: hidden;
 }
 
 .header-main {
@@ -55,7 +57,7 @@ body {
 }
 
 .header__search-input {
-  width: 540px;
+  width: 610px;
   height: 48px;
   padding-left: 20px;
   font-size: 1.8rem;
@@ -120,6 +122,12 @@ body {
 .comic {
   display: flex;
   width: 300px;
+  height: 230px;
+  transition: transform 0.3s;
+}
+
+.comic:hover {
+  transform: scale(1.2);
 }
 
 .comic-cover {
@@ -131,4 +139,177 @@ body {
   width: 150px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
+  color: var(--clr-fill-medium-dark);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 10px;
+}
+
+.comic-description > div {
+  font-family: "Noto Sans Mono", monospace;
+}
+
+.comic-genre {
+  font-size: 0.8rem;
+  opacity: 0.4;
+}
+
+.comic-name {
+  font-size: 1.3rem;
+  line-height: 1.2rem;
+  font-weight: bold;
+}
+
+.comic-issue-number {
+  font-size: 0.8rem;
+}
+
+.show-more-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+}
+
+.show-more-button {
+  font-size: 2rem;
+  font-family: "Noto Sans Mono", monospace;
+  color: var(--clr-fill-medium-dark);
+  background-color: var(--clr-font-main-dark);
+  border: none;
+  border: 2px solid var(--clr-fill-dark);
+  border-radius: 15px;
+  padding: 8px;
+  transition: all 0.2s;
+}
+
+.show-more-button:hover {
+  color: var(--clr-font-main-dark);
+  background-color: var(--clr-fill-dark);
+  border: 2px solid var(--clr-font-main-dark);
+  cursor: pointer;
+}
+
+@media (max-width: 1020px) {
+  .comics-container {
+    gap: 2rem;
+    justify-items: center;
+  }
+}
+
+@media (max-width: 820px) {
+  .header-main {
+    align-items: center;
+  }
+
+  .header-main > h1 {
+    font-size: 12vw;
+    line-height: 11vw;
+    margin-left: 4vw;
+  }
+
+  .header__search-wrapper > input {
+    height: 80px;
+    width: 60vw;
+    padding: 0;
+    font-size: 3rem;
+  }
+
+  .header__search-wrapper > button {
+    height: 82px;
+    font-size: 3rem;
+    width: 25vw;
+  }
+
+  .random-comics > h2 {
+    width: 70vw;
+    font-size: 7vw;
+    border-bottom: 1.5vw solid white;
+  }
+}
+
+@media (max-width: 700px) {
+  .comic {
+    height: 68vw;
+    width: 90vw;
+  }
+
+  .comic:hover {
+    transform: scale(1.1);
+  }
+
+  .comics-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .comic-cover {
+    width: 45vw;
+    height: 69vw;
+  }
+
+  .comic-description {
+    width: 40vw;
+    height: 69vw;
+    padding-left: 2vw;
+  }
+
+  .comic-genre {
+    font-size: 4vw;
+  }
+
+  .comic-name {
+    font-size: 8vw;
+    line-height: 8vw;
+  }
+
+  .comic-issue-number {
+    font-size: 4vw;
+  }
+
+  .random-comics {
+    padding-left: 6vw;
+  }
+}
+
+@media (max-width: 650px) {
+  .header__search-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .header__search-wrapper > input {
+    width: 85vw;
+    border: 2px solid white;
+  }
+
+  .header__search-wrapper > input:hover {
+    border: 2px solid white;
+  }
+
+  .header__search-wrapper > input:focus {
+    border: 2px solid white;
+  }
+
+  .header__search-wrapper > button {
+    width: 60vw;
+    align-self: center;
+    border: 2px solid white;
+    border-top: 0;
+  }
+
+  .random-comics > h2 {
+    font-size: 7vw;
+    margin-bottom: 5vw;
+    border-bottom: 1.5vw solid white;
+  }
+}
+
+@media (max-width: 400px) {
+  .header-main > h1 {
+    font-size: 20vw;
+    line-height: 18vw;
+  }
 }
