--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .header-main {
-  background-image: url("constantine-dark.png");
+  background-image: url("./constantine-dark.png");
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
